# Gtk_rs_debian

./: Cargo.toml  README.md
src/: main.rs
ui/: app.ui
