[package]
name = "my-gtk-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_8"] }
glib = "0.19.7"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
